Fixing spacing for new design

--- a/css/partnership.css
+++ b/css/partnership.css
@@ -4,6 +4,7 @@
 	background-color: #e6e6e6;
 	width: 100%;
 	text-align: center;
+	margin-top: -5px;
 }
 
 .partnerships h1 {
